notation and package dep

--- a/gg220606_allen_celltypes_de.ipynb
+++ b/gg220606_allen_celltypes_de.ipynb
@@ -6,7 +6,7 @@
     "id": "VPTqP9OGouov"
    },
    "source": [
-    "# *Monod* demonstration: identifying differenially regulated genes"
+    "# *Monod* demonstration: identifying differenially expressed genes"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "We ran the *Monod* inference pipeline on four pre-clustered mouse brain cell datasets, disaggregated into GABAergic and glutamatergic cell types. Each dataset was fit using the bursty model for transcriptional variation, coupled to a Poisson process for cDNA formation.\n",
     "\n",
-    "Given raw data, we can apply the $t$-test to spliced count data to identify genes that are differentially expressed (DE) between cell types. Further, we can iteratively it a Gaussian residual model to paired datasets' maximum likelihood physical parameter estimates. This allows us to ascribe changes in distribution shapes to the modulation of the rate of a particular biological process."
+    "Given raw counts, we can apply the $t$-test to transformed spliced count data to identify genes that are differentially expressed between cell types using the mean as a test statistic (i.e., DE-$\\phi(\\mu_M)$, for simplicity denoted DE-$\\mu$). Further, we can iteratively it a Gaussian residual model to paired datasets' maximum likelihood physical parameter estimates. This allows us to ascribe changes in distribution shapes to the modulation of the rate of a particular biological process, i.e., patterns of DE-$b$, DE-$\\beta/k$, and DE-$\\gamma/k$, for simplicity denoted as DE-$\\theta$."
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '/home/ggorin/projects/monod/src/monod/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {
     "id": "Kx9Vkj-lXUCE"
    },
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +121,7 @@
        " './fits/gg_220602_022_allen_celltypes_1/allen_H12_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load in the GABAergic and glutamatergic datasets."
+    "Load in the GABAergic and glutamatergic datasets and their fits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -180,12 +190,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define basic parameters."
+    "Define basic parameters. We set a fairly high $p$-value threshold."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,19 +211,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differential expression and regulation testing within a replicate"
+    "## DE-$\\mu$ testing within a replicate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, run the $t$-test to identify potential differences between the means."
+    "First, run the $t$-test to identify potential differences between the means of transformed count distributions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -257,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ggorin/projects/seq-cme-technoise/analysis.py:637: RuntimeWarning: divide by zero encountered in log10\n",
+      "/home/ggorin/projects/monod/src/monod/analysis.py:638: RuntimeWarning: divide by zero encountered in log10\n",
       "  pv = -np.log10(p)\n"
      ]
     },
@@ -287,7 +297,7 @@
     "de_ttest = np.zeros((n_datasets,n_genes),dtype=bool)\n",
     "\n",
     "for j in range(n_datasets):\n",
-    "    gf_ttest,fc_ = compute_diffexp(sd_arr_gaba[j],sd_arr_glu[j],lognormalize=True,viz=True,method='ttest',\n",
+    "    gf_ttest,fc_ = diffexp_mean(sd_arr_gaba[j],sd_arr_glu[j],lognormalize=True,viz=True,method='ttest',\n",
     "                                   ax1=ax1[j],pval_thr=pval_thr,bonferroni=False) #note Bonferroni has already been applied\n",
     "    de_ttest[j,:] = gf_ttest\n",
     "    ax1[j].set_xlabel(r'$\\mu_M$ $\\log_2$ fold change',fontsize=fs)\n",
@@ -303,12 +313,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we inspect the inferred parameter values."
+    "## DE-$\\theta$ testing within a replicate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we inspect the inferred parameter values $\\theta$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -381,12 +398,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform differential regulation analysis."
+    "Perform DE-$\\theta$ analysis using an *ad hoc* $Z$-test procedure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -451,13 +468,13 @@
    "source": [
     "dr_analysis = []\n",
     "for j in range(n_datasets):\n",
-    "    dr_analysis.append(compute_diffreg(sr_arr_gaba[j],sr_arr_glu[j],viz=True,modeltype='id',\n",
+    "    dr_analysis.append(diffexp_pars(sr_arr_gaba[j],sr_arr_glu[j],viz=True,modeltype='id',\n",
     "                                       meta=dataset_meta[j],use_sigma=True,pval_thr=0.001,nit=20))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differential expression testing with biological replicates"
+    "## DE-$\\mu$ testing with biological replicates"
    ]
   },
   {
@@ -572,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +623,7 @@
        "Text(0, 0.5, 'Average Glu $\\\\log_2$ $\\\\mu_M$')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +680,7 @@
        "Text(0.5, 0, 'Average $\\\\mu_M$ fold change across 4 datasets')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -701,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Differential regulation testing with biological replicates"
+    "## DE-$\\theta$ testing with biological replicates"
    ]
   },
   {
@@ -713,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,14 +771,12 @@
     "    m1 = par_vals_uncorrected[0,0,:,k]\n",
     "    for j in range(1,n_datasets):\n",
     "        m2 = par_vals_uncorrected[0,j,:,k]\n",
-    "        offset = diffreg_fpi(m1,m2,param_names[k],viz=False)[1]\n",
+    "        offset = diffexp_fpi(m1,m2,param_names[k],viz=False)[1]\n",
     "        par_vals[0,j,:,k] -= offset\n",
     "    for j in range(n_datasets):\n",
     "        m2 = par_vals_uncorrected[1,j,:,k]\n",
-    "        offset = diffreg_fpi(m1,m2,param_names[k],viz=False)[1]\n",
-    "        par_vals[1,j,:,k] -= offset\n",
-    "    \n",
-    "    "
+    "        offset = diffexp_fpi(m1,m2,param_names[k],viz=False)[1]\n",
+    "        par_vals[1,j,:,k] -= offset"
    ]
   },
   {
@@ -773,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,12 +875,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use an analogous $t$-test to identify DR genes, then plot against mean fold change in the parameter value."
+    "Use an analogous $t$-test to identify DE-$\\theta$ genes, then plot against mean fold change in the parameter value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1072,12 +1087,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mean and parameter modulation. About 40-60% of the genes identified by $t$-test are also identified by parameters."
+    "Mean and parameter modulation. About 40-60% of the genes identified by $t$-test are also identified by the FPI $Z$-test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1236,12 +1251,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Genes that appear as DR in any or all of the single-dataset results, as well as in validation."
+    "Genes that appear as DE-$\\theta$ in any or all of the single-dataset results, as well as in validation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1288,12 +1303,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Genes identified as DR but not DE. This is a large fraction of them."
+    "Genes identified as DE-$\\theta$ but not DE-$\\mu$. This is a large fraction of them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1314,12 +1329,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us consider the genes identified as DR in validation and at least one of the single-dataset cases, but nowhere identified as DE."
+    "Let us consider the genes identified as DE-$\\theta$ in validation and at least one of the single-dataset cases, but nowhere identified as DE-$\\mu$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,16 +1452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.ticker import AutoLocator\n"
+    "from matplotlib.ticker import AutoLocator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1478,6 @@
     }
    ],
    "source": [
-    "\n",
     "compare_gene_distributions([sr_arr_gaba[j],sr_arr_glu[j]],[sd_arr_gaba[j],sd_arr_glu[j]],sz = (2,7),figsize = (14,6),\\\n",
     "               marg='mature',logscale=None,title=True,\\\n",
     "               genes_to_plot = gf)\n",
@@ -1472,7 +1486,6 @@
     "i=0\n",
     "for ax in fig1.axes:\n",
     "    ax.xaxis.set_major_locator(AutoLocator()) \n",
-    "#     if i>6:\n",
     "    ax.set_xlabel('Mature RNA #')\n",
     "    if i==0 or i==7:\n",
     "        ax.set_ylabel('Probability mass')\n",
@@ -1484,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1527,14 +1540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 46.53 seconds.\n"
+      "Runtime: 43.12 seconds.\n"
      ]
     }
    ],
