--- a/gg220606_allen_celltypes_de.ipynb
+++ b/gg220606_allen_celltypes_de.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '/home/ggorin/projects/monod/src/monod/')"
+    "sys.path.insert(0, '/home/ggorin/projects/monod/src/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -67,19 +67,25 @@
    },
    "outputs": [],
    "source": [
-    "from preprocess import *\n",
-    "from extract_data import extract_data\n",
-    "import cme_toolbox\n",
-    "from cme_toolbox import CMEModel\n",
-    "import inference\n",
-    "from inference import InferenceParameters, GradientInference\n",
-    "import analysis \n",
-    "from analysis import *\n"
+    "import monod\n",
+    "from monod.preprocess import *\n",
+    "from monod.extract_data import extract_data\n",
+    "import monod.cme_toolbox as cme_toolbox\n",
+    "from monod.cme_toolbox import CMEModel\n",
+    "import monod.inference as inference\n",
+    "from monod.inference import InferenceParameters, GradientInference\n",
+    "import monod.analysis as analysis\n",
+    "from monod.analysis import *\n",
+    "\n",
+    "sys.modules['extract_data']=monod.extract_data #pickle compatibility workaround\n",
+    "sys.modules['inference']=inference\n",
+    "sys.modules['cme_toolbox']=cme_toolbox\n",
+    "sys.modules['analysis']=analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "id": "Kx9Vkj-lXUCE"
    },
@@ -94,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +127,7 @@
        " './fits/gg_220602_022_allen_celltypes_1/allen_H12_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +629,7 @@
        "Text(0, 0.5, 'Average Glu $\\\\log_2$ $\\\\mu_M$')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +686,7 @@
        "Text(0.5, 0, 'Average $\\\\mu_M$ fold change across 4 datasets')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -730,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1540,14 +1546,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 43.12 seconds.\n"
+      "Runtime: 47.83 seconds.\n"
      ]
     }
    ],
